--- a/Assets/CSS/WikipediaViewer.css
+++ b/Assets/CSS/WikipediaViewer.css
@@ -1,5 +1,6 @@
 body {
 	max-width: 1600px;
+	margin: 0 auto;
 	background: #2a2a2a;
 	background: -webkit-linear-gradient(to right, #000046, #1CB5E0);
 	background: linear-gradient(to right, #000046, #1CB5E0);
